--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "excel4node": "^1.8.2",
     "fs": "^0.0.1-security",
     "googleapis": "^148.0.0",
